--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-    "server-test":
+    server-test:
         docker:
             - image: circleci/python:3.7-node-browsers
             - image: cypress/base:10
@@ -11,7 +11,7 @@ jobs:
             - restore_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
             - run:
-                name: Install npm packages
+                name: 🏗️ Install npm packages
                 command: npm ci
             - save_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
@@ -19,7 +19,7 @@ jobs:
                     - node_modules
 
             - run:
-                name: Install requirements
+                name: 🏗️ Install requirements
                 command: |
                     sudo pip install --upgrade virtualenv
                     python -m venv venv || virtualenv venv
@@ -30,7 +30,7 @@ jobs:
                     cd dash-main/dash-renderer && npm run build && pip install -e . && cd ./../..
 
             - run:
-                name: Build
+                name: 🏗️ Build
                 command: |
                     . venv/bin/activate
                     npm run private::build:js-test
@@ -40,13 +40,13 @@ jobs:
                     find . -name "*.gz" | xargs pip install --no-cache-dir --ignore-installed && cd ..
 
             - run:
-                name: Run tests
+                name: 🧪 Run tests
                 command: |
                     . venv/bin/activate
                     npm run test.server
 
 
-    "standalone-test":
+    standalone-test:
         docker:
             - image: circleci/python:3.6.7-node-browsers
             - image: cypress/base:10
@@ -56,10 +56,10 @@ jobs:
             - restore_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
             - run:
-                name: Install npm packages
+                name: 🏗️ Install npm packages
                 command: npm ci
             - run:
-                name: Cypress Install
+                name: 🏗️ Cypress Install
                 command: |
                     $(npm bin)/cypress install
 
@@ -70,14 +70,14 @@ jobs:
                     - /home/circleci/.cache/Cypress
 
             - run:
-                name: Run tests
+                name: 🧪 Run tests
                 command: |
                     rm -rf node_modules/cypress
                     npm i cypress@3.4.1
                     npm run test.standalone
 
 
-    "unit-test":
+    unit-test:
         docker:
             - image: circleci/python:3.7.5-node-browsers
             - image: cypress/base:10
@@ -87,10 +87,10 @@ jobs:
             - restore_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
             - run:
-                name: Install npm packages
+                name: 🏗️ Install npm packages
                 command: npm ci
             - run:
-                name: Cypress Install
+                name: 🏗️ Cypress Install
                 command: |
                     $(npm bin)/cypress install
 
@@ -101,7 +101,7 @@ jobs:
                     - /home/circleci/.cache/Cypress
 
             - run:
-                name: Install requirements
+                name: 🏗️ Install requirements
                 command: |
                     sudo pip install --upgrade virtualenv
                     python -m venv venv || virtualenv venv
@@ -111,14 +111,14 @@ jobs:
                     pip install -e ./dash-main[dev] --quiet
 
             - run:
-                name: Run tests
+                name: 🧪 Run tests
                 command: |
                     . venv/bin/activate
                     npm run build
                     npm run test.unit
 
 
-    "visual-test":
+    visual-test:
         docker:
             - image: circleci/node:10-browsers
 
@@ -129,7 +129,7 @@ jobs:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
 
             - run:
-                name: Install package.json
+                name: 🏗️ Install package.json
                 command: npm ci
 
             - save_cache:
@@ -138,16 +138,16 @@ jobs:
                     - node_modules
 
             - run:
-                name: Run build:js
+                name: 🏗️ Run build:js
                 command: npm run private::build:js
 
             - run:
-                name: Run visual tests
+                name: 🧪 Run visual tests
                 command: npm run test.visual
             - store_artifacts:
                 path: storybook-static
 
-    "node":
+    node:
         docker:
             - image: circleci/python:3.7.5-node
 
@@ -155,14 +155,14 @@ jobs:
             - checkout
 
             - run:
-                  name: Create virtual env
+                  name: 🔧 Create virtual env
                   command: python -m venv || virtualenv venv
 
             - restore_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
 
             - run:
-                name: Install package.json
+                name: 🏗️ Install package.json
                 command: npm ci
 
             - save_cache:
@@ -171,20 +171,20 @@ jobs:
                     - node_modules
 
             - run:
-                name: Install requirements
+                name: 🏗️ Install requirements
                 command: |
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
 
             - run:
-                name: Run eslint
+                name: 🧪 Run eslint
                 command: |
                     . venv/bin/activate
                     npm run lint
                 when: always
 
 
-    "python-3.6":
+    python-3.6:
         docker:
             - image: circleci/python:3.7.5-stretch-node-browsers
 
@@ -196,12 +196,12 @@ jobs:
             - checkout
 
             - run:
-                name: Inject Percy Environment variables
+                name: 💉 Inject Percy Environment variables
                 command: |
                   echo 'export PERCY_TOKEN="$PERCY_PYTHON_TOKEN_V0"' >> $BASH_ENV
 
             - run:
-                name: Install requirements
+                name: 🏗️ Install requirements
                 command: |
                     sudo pip install --upgrade virtualenv
                     python -m venv venv || virtualenv venv
@@ -210,7 +210,7 @@ jobs:
                     npm ci
 
             - run:
-                name: Install dependencies (dash)
+                name: 🏗️ Install dependencies (dash)
                 command: |
                     . venv/bin/activate
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
@@ -218,7 +218,7 @@ jobs:
                     cd dash-main/dash-renderer && npm run build && pip install -e . && cd ../..
 
             - run:
-                name: Install test requirements
+                name: 🏗️ Install test requirements
                 command: |
                     . venv/bin/activate
                     npm run build
@@ -227,7 +227,7 @@ jobs:
                     find . -name "*.gz" | xargs pip install --no-cache-dir --ignore-installed && cd ..
 
             - run:
-                name: ⚙️ run integration test
+                name: ⚙️ Run integration test
                 command: |
                   . venv/bin/activate
                   pytest --junitxml=test-reports/dash.xml tests/integration
@@ -244,9 +244,9 @@ workflows:
     version: 2
     build:
         jobs:
-            - "python-3.6"
-            - "node"
-            - "server-test"
-            - "standalone-test"
-            - "unit-test"
-            - "visual-test"
+            - python-3.6
+            - node
+            - server-test
+            - standalone-test
+            - unit-test
+            - visual-test
