--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@percy/storybook": "^3.3.0",
-    "@plotly/dash-component-plugins": "^1.2.0",
+    "@plotly/dash-component-plugins": "file:plotly-dash-component-plugins-1.2.0.tgz",
     "@plotly/webpack-dash-dynamic-import": "^1.1.5",
     "@storybook/cli": "^6.0.5",
     "@storybook/react": "^6.0.5",
