--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,9 @@ jobs:
                 name: Build
                 command: |
                     . venv/bin/activate
+                    cd main/\\@plotly/dash-generate-components
+                    npm ci
+                    cd ../../..
                     npm run private::build:js-test
                     npm run private::build:backends
                     python setup.py sdist
