--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 -b dcg-template git@github.com:plotly/dash.git main
+                    cd ./main/\@plotly/dash-generate-components; npm ci; cd ../../..
                     pip install -e ./main[dev,testing] --quiet
                     cd main/dash-renderer && npm ci && npm run build && pip install -e . && cd ./../..
 
@@ -33,9 +34,6 @@ jobs:
                 name: Build
                 command: |
                     . venv/bin/activate
-                    cd main/\\@plotly/dash-generate-components
-                    npm ci
-                    cd ../../..
                     npm run private::build:js-test
                     npm run private::build:backends
                     python setup.py sdist
