--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,7 @@ jobs:
                     . venv/bin/activate
                     npm run private::build:js-test
                     npm run private::build:backends
-                    python setup.py sdist
-                    cd dist
+                    cd .dcg/dist/py; python setup.py sdist; cd dist
                     find . -name "*.gz" | xargs pip install --no-cache-dir --ignore-installed && cd ..
 
             - run:
