--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
                     npm run private::build:js-test
                     npm run private::build:backends
                     ls -laR .dcg/dist/py
+                    cat .dcg/dist/py/dash_table/metadata.json
                     cd .dcg/dist/py; python setup.py sdist; cd dist
                     find . -name "*.gz" | xargs pip install --no-cache-dir --ignore-installed && cd ..
 
