--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@percy/agent": "^0.28.4",
+    "@percy/puppeteer": "^1.1.0",
     "@percy/storybook": "^3.3.0",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "^1.1.5",
