--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,7 @@ jobs:
             - run:
                 name: Install Headless Chrome dependencies
                 command: |
-                    sudo apt-get install -yq \
-
-                    libnss3
+                    sudo apt-get install -yq libnss3
 
             - run:
                 name: Inject Percy Environment variables
