--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,9 @@ version: 2.1
 jobs:
     "server-test":
         docker:
-            - image: circleci/python:3.7-node-browsers
+            - image: circleci/python:3.7.6-node-browsers
+              environment:
+                PERCY_PARALLEL_TOTAL: -1
             - image: cypress/base:10
 
         steps:
@@ -37,7 +39,7 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
-                    git clone -b percy-python-selenium --depth 1 git@github.com:plotly/dash.git dash-main
+                    git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main[dev,testing] --quiet
                     cd dash-main/dash-renderer && npm ci && npm run build && pip install -e . && cd ./../..
 
