--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "postbuild": "es-check es5 dash_table/*.js",
     "format": "run-s private::format.*",
     "lint": "run-s private::lint.*",
-    "test.server": "percy exec -- pytest tests/selenium",
+    "test.server": "pytest --nopercyfinalize -k tbbs001",
     "test.standalone": "run-p --race private::host_js private::test.standalone",
     "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
@@ -63,8 +63,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@percy/agent": "^0.28.4",
-    "@percy/puppeteer": "^1.1.0",
     "@percy/storybook": "^3.3.0",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "^1.1.5",
