--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "preprivate::test.server": "run-s private::wait_dash*",
     "preprivate::test.standalone": "run-s private::wait_js",
     "pretest.standalone": "run-s private::build:js-test-standalone",
-    "private::build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack --display-reasons --bail",
+    "private::build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack --bail",
     "private::build:js": "run-s \"private::build -- --mode production\"",
     "private::build:js-test": "run-s \"private::build -- --mode development --config webpack.test.config.js\"",
     "private::build:js-test-standalone": "run-s \"private::build -- --mode development --config webpack.test.standalone.config.js\"",
@@ -65,7 +65,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@percy/storybook": "^3.3.0",
     "@plotly/dash-component-plugins": "^1.2.0",
-    "@plotly/webpack-dash-dynamic-import": "^1.1.5",
+    "@plotly/webpack-dash-dynamic-import": "file:plotly-webpack-dash-dynamic-import-1.2.0.tgz",
     "@storybook/cli": "^6.0.5",
     "@storybook/react": "^6.0.5",
     "@types/d3-format": "^1.3.1",
@@ -105,8 +105,8 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.7",
     "wait-on": "^5.2.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-preprocessor": "^0.1.12",
     "xlsx": "^0.16.6"
@@ -123,5 +123,8 @@
   "engines": {
     "node": ">=12.0.0",
     "npm": ">=6.1.0"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
