--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
   "maintainer": "Ryan Patrick Kyle <ryan@plotly.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-regenerator": "^7.10.4",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/plugin-transform-regenerator": "^7.12.13",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "@cypress/webpack-preprocessor": "^4.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
@@ -66,8 +66,10 @@
     "@percy/storybook": "^3.3.0",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "file:plotly-webpack-dash-dynamic-import-1.2.0.tgz",
-    "@storybook/cli": "^6.0.5",
-    "@storybook/react": "^6.0.5",
+    "@storybook/builder-webpack5": "^6.2.0-alpha.30",
+    "@storybook/cli": "^6.2.0-beta.10",
+    "@storybook/react": "^6.2.0-beta.10",
+    "@storybook/semver": "^7.3.2",
     "@types/d3-format": "^1.3.1",
     "@types/highlight.js": "^9.12.4",
     "@types/papaparse": "^5.0.6",
@@ -75,14 +77,14 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.16",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "css-loader": "^3.6.0",
     "css.escape": "^1.5.1",
     "cypress": "^3.8.1",
     "d3-format": "^1.4.4",
     "es-check": "^5.1.0",
     "fast-isnumeric": "^1.1.4",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
     "highlight.js": "^10.3.1",
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
@@ -92,13 +94,14 @@
     "papaparse": "^5.2.0",
     "prettier": "^2.0.5",
     "ramda": "^0.27.1",
-    "raw-loader": "^4.0.1",
+    "raw-loader": "^4.0.2",
     "react": "^16.13.1",
     "react-docgen": "^5.3.0",
     "react-dom": "^16.13.1",
     "react-select": "^1.3.0",
     "remarkable": "^2.0.1",
     "sheetclip": "^0.3.0",
+    "style-loader": "^1.3.0",
     "ts-loader": "^8.0.17",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -106,7 +109,7 @@
     "wait-on": "^5.2.0",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-preprocessor": "^0.1.12",
     "xlsx": "^0.16.6"
   },
