--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "private::wait_js": "wait-on http://localhost:8080",
     "private::opentests": "cypress open",
     "private::test.python": "python -m unittest tests/unit/format_test.py",
-    "private::test.unit": "cypress run --browser chrome --spec 'tests/cypress/tests/unit/**/*'",
+    "private::test.unit": "cypress run --browser chrome --spec 'tests/cypress/tests/unit/exportUtils_tests.ts'",
     "private::test.standalone": "cypress run --browser chrome --spec 'tests/cypress/tests/standalone/**/*'",
     "build.watch": "webpack-dev-server --disable-host-check --content-base dash_table --mode development --config webpack.dev.config.js",
     "build": "run-s private::build:js private::build:backends",
@@ -45,7 +45,9 @@
     "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
     "test.visual-local": "build-storybook",
-    "test.watch": "run-p --race \"private::build:js-test-watch\" --race private::host* private::opentests"
+    "test.watch": "run-p --race \"private::build:js-test-watch\" --race private::host* private::opentests",
+    "pouet": "TS_NODE_PROJECT='./tests/js-unit/tsconfig.json' mocha -r ts-node/register -r tsconfig-paths/register tests/js-unit/*.ts",
+    "pouet2": "karma start karma.conf.js --single-run"
   },
   "author": "Chris Parmer <chris@plotly.com>",
   "maintainer": "Ryan Patrick Kyle <ryan@plotly.com>",
@@ -70,17 +72,21 @@
     "@storybook/cli": "^6.2.0-beta.10",
     "@storybook/react": "^6.2.0-beta.10",
     "@storybook/semver": "^7.3.2",
+    "@types/chai": "^4.2.15",
     "@types/d3-format": "^1.3.1",
     "@types/highlight.js": "^9.12.4",
+    "@types/mocha": "^8.2.1",
     "@types/papaparse": "^5.0.6",
     "@types/ramda": "^0.26.21",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-select": "^3.0.16",
     "babel-loader": "^8.2.2",
+    "chai": "^4.3.3",
     "css-loader": "^3.6.0",
     "css.escape": "^1.5.1",
     "cypress": "^6.6.0",
+    "cypress-webpack-preprocessor-v5": "^5.0.0-alpha.1",
     "d3-format": "^1.4.4",
     "es-check": "^5.1.0",
     "fast-isnumeric": "^1.1.4",
@@ -88,8 +94,14 @@
     "highlight.js": "^10.3.1",
     "http-server": "^0.12.3",
     "husky": "^4.2.5",
+    "karma": "^6.1.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.1",
+    "karma-typescript": "^5.4.0",
+    "karma-webpack": "^5.0.0",
     "less": "^3.12.2",
     "less-loader": "^6.2.0",
+    "mocha": "^8.3.1",
     "npm-run-all": "^4.1.5",
     "papaparse": "^5.2.0",
     "prettier": "^2.0.5",
@@ -99,10 +111,12 @@
     "react-docgen": "^5.3.0",
     "react-dom": "^16.13.1",
     "react-select": "^1.3.0",
+    "regenerator-runtime": "^0.13.7",
     "remarkable": "^2.0.1",
     "sheetclip": "^0.3.0",
     "style-loader": "^1.3.0",
     "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.3",
